--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,6 +14,10 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>erent_flutter</string>
+	<key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to take photos for property valuations.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to select photos.</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
